tests/strings/wrapstrings.h

void STR_get_const_string_ref_alloc_bufferify(
    STR_SHROUD_array *DSHF_rv);
const char * STR_get_const_string_ptr_len();
void STR_get_const_string_ptr_len_bufferify(char * SHF_rv, int NSHF_rv);
const char * STR_get_const_string_ptr_alloc();
void STR_get_const_string_ptr_alloc_bufferify(
    STR_SHROUD_array *DSHF_rv);
const char * STR_get_const_string_ptr_owns_alloc();
void STR_get_const_string_ptr_owns_alloc_bufferify(
    STR_SHROUD_array *DSHF_rv);
void STR_accept_string_const_reference(const char * arg1);
void STR_accept_string_const_reference_bufferify(const char * arg1,
    int Larg1);
void STR_accept_string_reference_out(char * arg1);
void STR_accept_string_reference_out_bufferify(char * arg1, int Narg1);
void STR_accept_string_reference(char * arg1);
void STR_accept_string_reference_bufferify(char * arg1, int Larg1,
    int Narg1);
void STR_accept_string_pointer(char * arg1);
void STR_accept_string_pointer_bufferify(char * arg1, int Larg1,
    int Narg1);
void STR_explicit1(char * name);
void STR_explicit1_BUFFER(char * name, int AAlen);
void STR_explicit2(char * name);
void STR_explicit2_bufferify(char * name, int AAtrim);
void STR_creturn_char_bufferify(char * SHF_rv, int NSHF_rv);
void STR_cpass_char_ptr_bufferify(char * dest, int Ndest,
    const char * src, int Lsrc);