regression/run/char/char.h

char returnChar();
void passCharPtr(char * dest, const char *src);
void passCharPtrInOut(char * s);
const char *getCharPtr1(void);
void CpassChar(char status);
char CreturnChar();
void CpassCharPtr(char * dest, const char *src);